feat: save magazines with labels and categories