@@ -8,10 +8,12 @@ import com.codenbugs.ms_user.dtos.response.MagazineWithDocumentsResponse;
 import com.codenbugs.ms_user.exceptions.UserNotFoundException;
 import com.codenbugs.ms_user.models.magazine.Document;
 import com.codenbugs.ms_user.models.magazine.Magazine;
+import com.codenbugs.ms_user.models.magazine.MagazineHasCategory;
+import com.codenbugs.ms_user.models.magazine.MagazineHasLabel;
 import com.codenbugs.ms_user.models.user.User;
-import com.codenbugs.ms_user.repositories.magazine.DocumentRepository;
+import com.codenbugs.ms_user.repositories.magazine.*;
 import com.codenbugs.ms_user.repositories.user.UserRepository;
-import com.codenbugs.ms_user.repositories.magazine.MagazineRepository;
+import com.codenbugs.ms_user.services.labels.UserHasLabelServiceImpl;
 import lombok.Getter;
 import lombok.RequiredArgsConstructor;
 import lombok.Setter;
@@ -20,6 +22,7 @@ import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 import org.springframework.web.multipart.MultipartFile;
 
+import java.util.ArrayList;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Optional;
@@ -37,11 +40,16 @@ public class MagazineServiceImpl implements MagazineService {
     private final DocumentServiceImpl documentServiceImpl;
     private final DocumentRepository documentRepository;
     private final UploadRestClient uploadRestClient;
+    private final CategoryService categoryService;
+    private final CategoryService categoryServiceImpl;
+    private final UserHasLabelServiceImpl userHasLabelService;
+    private final MagazineHasCategoryRepository magazineHasCategory;
+    private final MagazineHasLabelRepository magazineHasLabel;
 
 
     @Override
     @Transactional
-    public MagazineResponse saveMagazine(MagazineRequest magazine, MultipartFile path) throws UserNotFoundException {
+    public MagazineResponse saveMagazine(MagazineRequest magazine) throws UserNotFoundException {
         Magazine magazineToSave = new Magazine();
 
         Optional<User> userOptional = this.userRepository.findById(magazine.FK_User());
@@ -50,7 +58,13 @@ public class MagazineServiceImpl implements MagazineService {
             throw new UserNotFoundException("El usuario no existe");
         }
 
-        HashMap<String,String> path_saved = this.uploadRestClient.uploadFile(path);
+        MultipartFile file = magazine.file();
+
+        if (file == null || file.isEmpty()) {
+            throw new IllegalArgumentException("El archivo está vacío o no se envió.");
+        }
+
+        HashMap<String,String> path_saved = this.uploadRestClient.uploadFile(magazine.file());
 
         User user = userOptional.get();
 
@@ -69,6 +83,25 @@ public class MagazineServiceImpl implements MagazineService {
         Magazine savedMagazine = this.magazineRepository.save(magazineToSave);
 
 
+        magazine.categories().forEach( category -> {
+            MagazineHasCategory magazineHasCategory = new MagazineHasCategory();
+            category.setId(this.categoryService.findByName(category.getName().toLowerCase()).getId());
+            magazineHasCategory.setCategory(category);
+            magazineHasCategory.setMagazine(magazineToSave);
+
+            this.magazineHasCategory.save(magazineHasCategory);
+        });
+
+
+        magazine.labels().forEach(label -> {
+            MagazineHasLabel magazineHasLabel = new MagazineHasLabel();
+            label.setId(this.userHasLabelService.findByName(label.getName()).getId());
+            magazineHasLabel.setLabel(label);
+            magazineHasLabel.setMagazine(magazineToSave);
+
+            this.magazineHasLabel.save(magazineHasLabel);
+        });
+
         docToSave.setPath(path_saved.getOrDefault(path_saved.keySet().iterator().next(), null));
         docToSave.setMagazine(savedMagazine);
 
@@ -86,26 +119,11 @@ public class MagazineServiceImpl implements MagazineService {
 
         User user = userOptional.get();
 
-        List<Magazine> allMagazines = magazineRepository.findAll(); //
+        List<Magazine> userMagazines = magazineRepository.findByUserId(user.getId());
 
-        return allMagazines.stream()
-                .filter(magazine -> magazine.getUser().getId().equals(user.getId()))
-                .map(magazine -> {
-                    List<Document> documents = documentRepository.findAllByMagazine_Id(magazine.getId());
-
-                    List<DocumentResponse> documentResponses = documents.stream()
-                            .map(document -> new DocumentResponse(
-                                    document.getId(),
-                                    document.getMagazine().getId(),
-                                    document.getPath()
-                            ))
-                            .collect(Collectors.toList());
-
-                    return new MagazineWithDocumentsResponse(
-                            magazine,documentResponses
-                    );
-                })
-                .collect(Collectors.toList());
+        return userMagazines.stream()
+                .map(MagazineWithDocumentsResponse::new)
+                .toList();
     }
 
     @Override
